cmake_minimum_required(VERSION 3.18)
project(ToolBox LANGUAGES C CXX)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/lib)
if(CMAKE_SYSTEM_NAME MATCHES "Windows")
  list(APPEND CMAKE_EXE_LINKER_FLAGS "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
endif()

# -flto
cmake_policy(SET CMP0069 NEW)
include(CheckIPOSupported)
check_ipo_supported(RESULT INTERPROCEDURAL_OPTIMIZATION_SUPPORTED)
if(INTERPROCEDURAL_OPTIMIZATION_SUPPORTED)
  set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
  set(CMAKE_POLICY_DEFAULT_CMP0069 "NEW" CACHE STRING "" FORCE)
else()
  set(CMAKE_INTERPROCEDURAL_OPTIMIZATION OFF)
endif()

# -fPIC
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON CACHE BOOL "-fPIC" FORCE)



# libui
add_subdirectory(libui)

